# Battle-Tanks

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  code_q.yml  code_quality_check.yml  test.yml
app/: CMakeLists.txt  debug_log.h  main.cpp
app/components/resizable_label/: resizable_label.cpp  resizable_label.h
app/components/resizable_qlabel/: resiable_qlabel.cpp  resizable_qlabel.cpp  resizable_qlabel.h
app/game/: game_widget.cpp  game_widget.h
app/ui/construction_layout/: construction_layout.cpp  construction_layout.h
app/ui/game_layout/: game_layout.cpp  game_layout.h
app/ui/levels_layout/: levels_layout.cpp  levels_layout.h
app/ui/menu_layout/: menu_layout.cpp  menu_layout.h
app/ui/menu_window/: menu_window.cpp  menu_window.h
app/ui/window/: window.cpp  window.h
tests/: CMakeLists.txt
tests/test_components/test_resizable_label/: test_resizable_label.cpp  test_resizable_label.h
tests/test_components/test_resizable_qlabel/: test_resizable_qlabel.cpp  test_resizable_qlabel.h
tests/test_ui/test_menu_window/: menu_window_test.h
